--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(67, 54, 80);
+  background-color: azure;
   font-family: 'Gotham', sans-serif;
-  color: azure;
 }
 
 code {
@@ -18,6 +17,7 @@ code {
 .main h1 {
   text-align: center;
   letter-spacing: 2px;
+  font-size: 50px;
 }
 
 .form-cards {
@@ -34,6 +34,12 @@ code {
   margin-left: 150px;
   width: 30%; 
   transition: 0.1s;
+  border: 1px solid #67a36a;
+  border-radius: 5px;
+  background: radial-gradient(#000000 0%, #67a36a 90%);
+  color: azure;
+  padding: 20px;
+  height: fit-content;
 }
 
 .form label {
@@ -45,7 +51,7 @@ code {
   margin-left: 10px;
   border-radius: 3px;
   padding: 5px;
-  border: 0px;
+  border: 1px solid rgb(112, 112, 112);
   font-family: 'Gotham', sans-serif;
   background-color: azure;
 }
@@ -57,7 +63,7 @@ code {
   border-radius: 5px;
   background-color: aquamarine;
   font-size: 20px;
-  margin: 50px 0px 0px 100px;
+  margin: 20px auto;
   transition: 0.1s;
   font-family: 'Gotham', sans-serif;
   cursor: pointer;
@@ -74,10 +80,10 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: radial-gradient(#000000 0%, #63407b 90%);
+  background: radial-gradient(#000000 0%, #67a36a 90%);
   color: azure;
   width: 80%;
-  border: 10px solid black;
+  border: 0px solid black;
   padding: 20px;
   transition: 0.1s;
   border-radius: 15px;
